Implement QA API improvements
